<resources>
    <string name="app_name">FootyWorld</string>

    <array name="positions">
        <item>Goalkeeper</item>
        <item>Centre Defender</item>
        <item>Wide Defender</item>
        <item>Midfielder</item>
        <item>L. Winger</item>
        <item>R. Winger</item>
    </array>

    <string name="goalstextView">Enter goals here</string>
    <string name="assiststextView">Enter assists here</string>
    <string name="savestextView">Enter saves here</string>
    <string name="gpmtextView">Enter gpm here</string>

    <array name="makeTeamOptions">
        <item>Pick Random Teams</item>
        <item>Pick Chemistry Based Teams</item>
        <!--<item>Build Standard Formation</item> -->
    </array>

    <array name="editPlayerListOptions">
        <item>Add A Player</item>
        <item>Remove A Player</item>
    </array>


    <string name="statSectionHeader">Please enter your name and statistics where applicable. Submit when done</string>

    <string name="positionSelect">Please choose your 2 favourite positions</string>

    <string name="selectSquad">Please select the squad you would like teams for</string>
</resources>
